objects/chargebeeapps__CB_Opportunity_Product__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Opportunity_Product_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CB Opportunity Products</relationshipLabel>
        <relationshipName>CB_Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CB Opportunity Products</relationshipLabel>
        <relationshipName>CB_Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CB Opportunity Product</label>
    <nameField>
        <label>CB Opportunity Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>